--- a/thesis/06Implementacja.tex
+++ b/thesis/06Implementacja.tex
@@ -4,11 +4,11 @@
 \section{Wstęp}
 \label{Chapter61}
 
+{\color{red}Wersja bez redakcji.}
+
 %Wprowadzenie. Struktura tego rozdziału nie jest z góry określona, gdyż mocno zależy to od specyfiki projektu. Generalnie w poszczególnych podrozdziałach każdy powinien opisać swoją część z takiego technicznego punktu widzenia. Piszecie, jak zrealizowaliście poszczególne wymagania, jak to wygląda ,,pod maską'', oczywiście też trzeba przyjąć jakiś poziom szczegółowości. W bardzo szczególnych przypadkach chyba może się zdarzyć, że trzeba będzie załączyć fragment jakiegoś kodu źródłowego czy konfiguracji -- generalnie ma to być opisane w taki sposób, że jako osoba nieznająca systemu siadam i wiem, jak i co zrobiliście. Oczywiście, to moje dywagacje, być może osoby związane z uczelnią zlinczują mnie za ten fragment.
 %
-\section{Użyte technologie}
-\label{Chapter62}
-
+\subsection{Użyte technologie}
 W poniższym rozdziale postaram się wyjaśnić wybór odpowiednich technologii użytych w pracy.
 \subsubsection{PHP}
 \emph{PHP} to język w którym napisany jest system \emph{Moodle}, dlatego też jest językiem większości naszych rozszerzeń.
@@ -26,6 +26,7 @@ Ze względu na wymaganie pozafunkcjonalne wybraliśmy system zarządzania wersja
 Już od początku pracy korzystaliśmy z systemu zarządzania projektami \emph{Redmine}. To narzędzie bardzo przydatne w wymianie informacji pomiędzy członkami zespołu, integrujące się m.in. z repozytorium kodu.
 \subsubsection{JasperReports}
 Ze względu na wymaganie pozafunkcjonalne zdecydowaliśmy się skorzystać z mechanizmów raportowania oferowanych przez \emph{JasperReports}.
+%MT
 \subsubsection{JavaScript}
 Formularze wymagające częstej interakcji z klientem, np. formularz umożliwiający tworzenie nowej ankiety, oraz funkcje związane z walidacją pól uzupełnianych przez klienta zostały napisane w \emph{JavaScript}. Obsługa strony po stronie użytkownika zapobiega frustracji, związanej z częstym przeładowywaniem całej strony.
 
