--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -3,7 +3,6 @@
 
 \documentclass[polish,bachelor,a4paper,oneside]{ppfcmthesis}
 
-
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{usecase}
@@ -11,6 +10,8 @@
 \usepackage[table]{xcolor}
 \usepackage{mat}
 \usepackage{verbatim}
+
+\hyphenation{roz-sze-rza-ją-cych}
 
 % Authors of the thesis here. Separate them with \and
 \author{%
