--- a/thesis/02Biznes.tex
+++ b/thesis/02Biznes.tex
@@ -1,12 +1,14 @@
 \chapter{Opis procesów biznesowych}
 \label{Chapter2}
 
+System iQuest, będący przedmiotem niniejszej Pracy Dyplomowej, jest nie tylko projektem edukacyjnym, lecz jednocześnie, pełnoprawnym zleceniem biznesowym. Wykonywany dla Dziekana Wydziału Informatyki Politechniki Poznańskiej, traktowany jest dokładnie tak samo, jak w pełni profesjonalne zlecenia, z którymi jego uczestnikom przyjdzie się zmierzyć w przyszłości. Z tego względu, konieczna jest jego analiza w kontekście powiązanych procesów biznesowych.
+
 \section{Aktorzy}
 \label{Chapter21}
 
-Aktorami zdefiniowanymi w Systemie są:
+W systemie zdefiniowani są następujący aktorzy:
 \begin{itemize}
-\item System -- opisywany System iQuest.
+\item System -- opisywany system, iQuest.
 \item Administrator -- zarządza sprawami technicznymi, związanymi platformą Moodle. Funkcję mogą pełnić osoby mające podstawową wiedzę informatyczną, znający mechanizmy Moodle'a.
 \item Administrator Bazy Danych -- zarządza sprawami technicznymi, związanymi z prawami do grup docelowych, ich tworzeniem i utrzymaniem. Funkcję mogą pełnić Pracownicy Uczelni\slash Dziekanatu oraz Administratorzy Systemów.
 \item Ankieter -- tworzy ankiety, wskazuje grupy docelowe i rozsyła ankiety. Może też przeglądać raporty. Funkcję mogą pełnić: Prowadzący zajęcia, Pracownik Dziekanatu.
@@ -15,6 +17,8 @@ Aktorami zdefiniowanymi w Systemie są:
 
 \section{Obiekty biznesowe}
 \label{Chapter22}
+
+W ramach systemu iQuest, zdefiniowane są cztery obiekty biznesowe. Mowa o Badaniu, Ankiecie, Grupie Docelowej i Raporcie.
 
 \subsection{Badanie}
 
@@ -71,7 +75,7 @@ Zebrane odpowiedzi z jednego lub z kilku badań. Może zawierać wykresy, zestaw
 \section{Biznesowe przypadki użycia}
 \label{Chapter23}
 
-Poniżej przedstawione zostały biznesowe przypadki użycia.
+Poniżej przedstawione zostały biznesowe przypadki użycia. Obejmują one dwa główne zagadnienia: zbieranie informacji oraz zarządzanie Grupami Docelowymi.
 
 \subsection{BC01: Zbieranie informacji o Absolwentach}
 
