--- a/thesis/04Pozafunkcjonalne.tex
+++ b/thesis/04Pozafunkcjonalne.tex
@@ -6,7 +6,7 @@
 
 W niniejszym rozdziale zostaną zaprezentowane i krótko opisane charakterystyki oraz wymagania pozafunkcjonalne obowiązujące dla systemu. Ponadto zostanie podjęta próba weryfikacji, które wymagania udało się spełnić i jakie są perspektywy rozwoju
 
-%\section{Charakterystyki oprogramowania}
+\section{Charakterystyki oprogramowania}
 %
 %Poniżej są jeszcze stare charakterystyki oprogramowania (wtedy myśleliśmy, że to mądrze brzmi), kategorii wymagań pozafunkcjonalnych. Obecnie to się trochę zmieniło, zatem ta lista będzie znacznie bardziej rozbudowana.
 %
@@ -26,7 +26,7 @@ W niniejszym rozdziale zostaną zaprezentowane i krótko opisane charakterystyki
 %
 %Tutaj piszemy, które podcharakterystyki były dla nas priorytetowe lub szczególnie ważne, a które mniej. Oczywiście, z uzasadnieniem. Piszemy również, jak zamierzaliśmy (lub to robiliśmy) dbać o to, aby wszystko było spełnione.
 %
-%\section{Wymagania pozafunkcjonalne i ich weryfikacja}
+\section{Wymagania pozafunkcjonalne i ich weryfikacja}
 %
 %W tablicy \ref{tab:reqs} przedstawiono wymagania pozafunkcjonalne związane z systemem. W kolumnach \textbf{Priorytet} oraz \textbf{Trudność} określono poziomy przy pomocy następującej notacji:
 %
