--- a/thesis/05Architektura.tex
+++ b/thesis/05Architektura.tex
@@ -4,12 +4,12 @@
 \section{Wstęp}
 \label{Chapter51}
 
-Wprowadzenie, bardzo ogólny opis. 
+{\color{red}Wprowadzenie, bardzo ogólny opis.}
 
 \section{Opis ogólny architektury -- Marketecture}
 \label{Chapter52}
 
-Tutaj rysunek i opis marketecture.
+{\color{red}Tutaj rysunek i opis marketecture.}
 
 %\section{Analiza SWOT}
 %\label{Chapter53}
@@ -21,31 +21,31 @@ Tutaj rysunek i opis marketecture.
 
 \subsection{Perspektywa fizyczna}
 
-Rysunek wraz z opisem.
+{\color{red}Rysunek wraz z opisem.}
 
 \subsection{Perspektywa logiczna}
 
-Rysunek wraz z opisem.
+{\color{red}Rysunek wraz z opisem.}
 
 \subsection{Perspektywa implemetancyjna}
 
-Rysunek wraz z opisem. Można tutaj też umieścić perspektywę kodu.
+{\color{red}Rysunek wraz z opisem. Można tutaj też umieścić perspektywę kodu.}
 
 \subsection{Perspektywa procesu (równoległości)}
 
-Rysunek wraz z opisem.
+{\color{red}Rysunek wraz z opisem.}
 
 \section{Decyzje projektowe}
 \label{Chapter55}
 
-Tutaj piszemy o decyzjach projektowych, związkach pomiędzy nimi oraz innych związanych sprawach.
+{\color{red}Tutaj piszemy o decyzjach projektowych, związkach pomiędzy nimi oraz innych związanych sprawach.}
 
 \section{Wykorzystane technologie}
 \label{Chapter56}
 
-Opis wykorzystywanych technologii (COTS).
+{\color{red}Opis wykorzystywanych technologii (COTS).}
 
 \section{Schemat bazy danych}
 \label{Chapter57}
 
-Schemat bazy danych, ze względu na objętość, można umieścić w którymś dodatku.
+{\color{red}Schemat bazy danych (tu lub w osobnym dodatku).}
